# Swing

./: .env.example  .gitignore  README.md  backtest_3days.py  backtest_multi.py  pyproject.toml  requirements.txt  run_dates.py  simulate_portfolio.py
.github/workflows/: backtest.yml  backtest_multi.yml  ci.yml  daily_scan.yml  manual_scan.yml  morning_line.yml  setup_check.yml
docs/: scoring_model.md
src/: config.py  main.py
src/data/: data_loader.py  edinet_client.py  jquants_client.py  macro_client.py  margin_client.py  market_calendar.py  news_client.py  stock_list.py  tdnet_client.py  yahoo_client.py
src/indicators/: oscillator.py  pattern.py  technical.py  trend.py  volume.py  wave.py
src/notify/: discord.py  formatter.py  line.py
src/scoring/: risk.py  scorer.py
src/screening/: fundamental.py  liquidity.py  news_filter.py  pipeline.py  technical.py
src/sector/: sector_analyzer.py  sector_config.py
src/utils/: discord_helper.py  logging_config.py
tests/: test_formatter.py  test_indicators.py  test_line.py  test_pipeline_integration.py  test_scoring.py  test_screening.py  test_sector.py
